<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_bar_height"
    android:orientation="horizontal"
    android:background="?attr/colorSurface"
    android:elevation="4dp">

    <!-- Save Button -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_action_save"
        style="@style/PageActionButton"
        android:text="@string/page_action_save"
        app:drawableTopCompat="@drawable/ic_page_action_save_border" />

    <!-- Find in Article Button -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_action_find_in_article"
        style="@style/PageActionButton"
        android:text="@string/page_action_find_in_article"
        app:drawableTopCompat="@drawable/ic_page_action_find_in_page" />

    <!-- Theme Button -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_action_theme"
        style="@style/PageActionButton"
        android:text="@string/page_action_theme"
        app:drawableTopCompat="@drawable/ic_page_action_theme" />

    <!-- Contents Button -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/page_action_contents"
        style="@style/PageActionButton"
        android:text="@string/page_action_contents"
        app:drawableTopCompat="@drawable/ic_page_action_contents" />

</LinearLayout>