<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/paper_color"
    android:orientation="horizontal"
    android:padding="16dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:text="@string/nav_search"
        android:textColor="?attr/primary_text_color"
        android:textAppearance="@style/AppTextAppearance.Headline" />

    <ImageButton
        android:id="@+id/history_filter_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_search"
        android:src="@drawable/ic_search_24"
        android:tint="?attr/secondary_text_color"
        app:tint="?attr/secondary_text_color" />

    <ImageButton
        android:id="@+id/history_delete_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/action_clear_history"
        android:src="@drawable/ic_baseline_delete_24"
        android:tint="?attr/secondary_text_color"
        app:tint="?attr/secondary_text_color" />

</LinearLayout>